Fix: hide footer when QRCode is visible

--- a/examples/main.css
+++ b/examples/main.css
@@ -659,6 +659,10 @@ label {
   width: 50%;
 }
 
+.authing-header-tabs li.width-100 {
+  width: 100%;
+}
+
 .authing-header-tabs li a {
   padding: 11px 10px;
   display: block;
